--- a/index.css
+++ b/index.css
@@ -27,12 +27,19 @@
     background-color: #faedcd;
     border-radius: 2em;
     text-align: center;
-    margin-top: 10%;
+    margin-top: 2%;
     margin-left: 10%;
     margin-right: 10%;
     padding: 1em;
   }
   
+  img {
+    display: block;
+    margin : 2em auto;
+    max-width: 10%;
+    height: auto;
+    }
+
   h1 {
     font-size: 3em;
     font-family: "Playwrite AR", cursive;
@@ -49,3 +56,43 @@
     font-style: normal;
     color: #a4ac86;
     }
+
+  nav {
+    text-align: center;
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    padding:1em 20em; 
+  }
+
+  nav > a {
+  text-decoration: none;
+  background-color: #b5838d;
+  color: white;
+  padding: 1em;
+  border-radius: 2.5em;
+  font-size:medium;
+  font-family: "Playwrite AR", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+
+  }
+
+  nav > a:hover {
+    background-color: #a4ac86;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-size: 1.5em;
+    font-family: "VT323", monospace;
+    font-weight: 400;
+    font-style: normal;
+    padding: 10px 0;
+    
+  }
