--- a/recipes.css
+++ b/recipes.css
@@ -68,6 +68,26 @@ img {
     background-color: #a4ac86;
 }
 
+
+ div > a {
+    text-decoration: none;
+    text-align: center;
+    background-color: #b5838d;
+    color: white;
+    padding: 1em;
+    border-radius: 2.5em;
+    font-size:medium;
+    font-family: "Playwrite AR", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    
+}
+
+div > a:hover {
+    background-color: #a4ac86;
+}
+
 @media (max-widht:800px) {
     .navbar {
         flex:100%
