--- a/travel.css
+++ b/travel.css
@@ -34,6 +34,27 @@ html, body {
     padding: 1em;
 }
   
+.content > #howl-castle {
+    float: right;
+    max-width: 30%;
+    height: auto;
+    margin-right: 2em;
+}
+
+.content > #spirited {
+    float: left;
+    max-width: 20%;
+    height: auto;
+    margin-right: 2em;
+    
+}
+
+.content > #colmar {
+    
+    max-width: 30%;
+    height: auto;
+}
+
 img {
     display: block;
     margin : 2em auto;
@@ -68,6 +89,25 @@ img {
     background-color: #a4ac86;
 }
 
+
+.button > a {
+    text-decoration: none;
+    text-align: center;
+    background-color: #b5838d;
+    color: white;
+    padding: 1em;
+    border-radius: 2.5em;
+    font-size:medium;
+    font-family: "Playwrite AR", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    
+}
+
+.button > a:hover {
+    background-color: #a4ac86;
+}
 
  div > a {
     text-decoration: none;
@@ -113,6 +153,7 @@ h2,h3{
 
 h4 {
     text-align: left;
+    text-decoration: underline;
     padding-left: 1em;
     font-size: 1.7em;
     font-family: "Playwrite AR", cursive;
@@ -150,4 +191,19 @@ footer {
     font-style: normal;
     padding: 10px 0;
     
+}
+
+
+.map-div iframe {
+    border: 0;
+    padding: 10px;
+}
+
+.gfg {
+    text-align: center;
+    color: green;
+}
+
+.map-div {
+    background-color: rgb(152, 178, 234);
 }
