--- a/travel.css
+++ b/travel.css
@@ -55,6 +55,32 @@ html, body {
     height: auto;
 }
 
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.column {
+    flex: 1;
+    padding: 0 10px; 
+}
+
+.column img {
+    max-width: 80%;
+    height: auto;
+}
+
+.text-container {
+    overflow: auto; /* Ensure the container clears the float */
+}
+
+.float-right {
+    float: right;
+    margin-left: 15px; /* Optional: Add some margin to the left of the image */
+    max-width: 30%; /* Set a maximum width for the image */
+    height: auto; /* Maintain aspect ratio */
+}
+
 img {
     display: block;
     margin : 2em auto;
@@ -62,6 +88,17 @@ img {
     height: auto;
 }
 
+p > a {
+    background-color: #b5838d;
+    color: white;
+    padding: 0.5em;
+    border-radius: 2.5em;
+    font-size:medium;
+    font-family: "Playwrite AR", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
 .navbar {
     display: flex; 
     flex-flow: row wrap;
@@ -179,19 +216,7 @@ iframe {
     padding-left: 4em;
 }
 
-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: white;
-    font-size: 1.5em;
-    font-family: "VT323", monospace;
-    font-weight: 400;
-    font-style: normal;
-    padding: 10px 0;
-    
-}
+
 
 
 .map-div iframe {
@@ -206,4 +231,18 @@ footer {
 
 .map-div {
     background-color: rgb(152, 178, 234);
+}
+  
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  font-size: 1.5em;
+  font-family: "VT323", monospace;
+  font-weight: 400;
+  font-style: normal;
+  padding: 10px 0;
+  
 }
