feat: fixed button in all pages and changed background color in shop page container

--- a/recipes.css
+++ b/recipes.css
@@ -69,7 +69,13 @@ img {
 }
 
 
- div > a {
+div {
+    margin-top: 2em;
+    margin-bottom: 1em;
+}
+
+
+div > a {
     text-decoration: none;
     text-align: center;
     background-color: #b5838d;
@@ -81,6 +87,7 @@ img {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    
     
 }
 
