--- a/recipes.css
+++ b/recipes.css
@@ -14,7 +14,7 @@ html, body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 110%;
     height: 100%;
     background: url('assets/homepage.gif') no-repeat center center fixed;
     background-size: cover;
@@ -32,6 +32,13 @@ html, body {
     margin-left: 10%;
     margin-right: 10%;
     padding: 1em;
+}
+
+.kikigif {
+    display: block;
+    margin : 2em auto;
+    max-width: 10%;
+    height: auto;
 }
   
 img {
