--- a/shop.css
+++ b/shop.css
@@ -55,6 +55,12 @@ html, body {
     max-width: 100%;
 }
 
+a > img {
+    display: block;
+    margin : 2em auto;
+    max-width: 10%;
+    height: auto;
+}
 
 
 img {
