--- a/recipes.css
+++ b/recipes.css
@@ -1,27 +1,22 @@
-body{
+body, html {
     margin: 0;
+    padding: 0;
     height: 100%;
-    overflow: hidden;
-    line-height: 1.6;
-}
-
-html, body {
-    height: 100%;
-    overflow-y: auto;
+    overflow-x: hidden;
 }
   
-.background {
+  .background {
     position: fixed;
     top: 0;
     left: 0;
-    width: 110%;
+    width: 100%;
     height: 100%;
     background: url('assets/homepage.gif') no-repeat center center fixed;
     background-size: cover;
     z-index: -1; /* Ensure the background is behind the content */
-}
+  }
   
-.content {
+  .content {
     position: relative;
     z-index: 1; /* Ensure the content is in front of the background */
     color: white;
@@ -32,21 +27,16 @@ html, body {
     margin-left: 10%;
     margin-right: 10%;
     padding: 1em;
+  }
+
+a > img {
+    display: block;
+    margin : 2em auto;
+    max-width: 10%;
+    height: auto;
+    
 }
 
-.kikigif {
-    display: block;
-    margin : 2em auto;
-    max-width: 10%;
-    height: auto;
-}
-  
-img {
-    display: block;
-    margin : 2em auto;
-    max-width: 10%;
-    height: auto;
-}
 
 .navbar {
     display: flex; 
@@ -102,7 +92,7 @@ div > a:hover {
     background-color: #a4ac86;
 }
 
-@media (max-widht:800px) {
+@media (max-width:800px) {
     .navbar {
         flex:100%
     }
@@ -162,7 +152,7 @@ iframe {
         justify-content: center;
         align-items: center;
     }
-  }
+}
 
 footer {
     display: flex;
@@ -176,4 +166,4 @@ footer {
     font-style: normal;
     padding: 10px 0;
     
-}
+} 
