--- a/index.css
+++ b/index.css
@@ -96,17 +96,18 @@ body, html {
     }
   }
   
-  footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  footer > h5{
+    position: relative;
+    width: 100%;
     text-align: center;
+    bottom: 0;
     color: white;
     font-size: 1.5em;
     font-family: "VT323", monospace;
     font-weight: 400;
     font-style: normal;
-    padding: 10px 0;
+  
+   
     
   }
   
