--- a/news.css
+++ b/news.css
@@ -46,7 +46,7 @@ html, body {
     height: auto; /* Maintain aspect ratio */
 }
 
-img {
+a > img {
     display: block;
     margin : 2em auto;
     max-width: 10%;
@@ -145,9 +145,12 @@ div > a:hover {
 .card-article:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
-.card-article > img {
-    width: 60em;
+a > .card-article > .news-image {
+    width: 40%;
+    height: auto;
     border-radius: 5px 5px 0 0;
+    background: none;
+
 }
 
 
